# OpenCascadeQML

./: CMakeLists.txt
qml/: main.qml
src/: OCCView.cpp  OCCView.h  main.cpp
